# tunafish

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/tunafish/: tunafish.h
engine/include/tunafish/core/: error.h  export.h  log.h  math.h  memory.h  time.h  types.h
engine/include/tunafish/platform/: input.h  window.h
engine/include/tunafish/renderer/: camera.h  material.h  mesh.h  renderer.h  renderer_types.h  shader.h  texture.h
engine/include/tunafish/renderer/backend/: renderer_backend.h
engine/include/tunafish/renderer/backend/opengl/: gl_renderer.h
engine/src/: tunafish.c
engine/src/core/: error.c  log.c  math.c  memory.c  time.c
engine/src/platform/: input.c  window.c
engine/src/renderer/: renderer.c  shader.c
engine/src/renderer/backend/opengl/: gl_renderer.c
testbed/: CMakeLists.txt  testbed.c
